2008-07-10:
* Added: basic plugins support

2008-07-08:
* Fixed: bug with unindention of the line below the selected ones

2008-07-05:
* Splitted 0.3 branch and started 0.4-dev

-------------------------------
Version 0.3-beta2
-------------------------------
* Fixed: bug with session restoring on Windows (forgot 
  about ':' in file path :))
* Added: syncronizing 'Open' dialog with current doc's dir
* Added: custom color for markers
* Added: custom color for current line highlighting
* Added: unindention of selected text with Shift+Tab
* Added: --lrelease option to configure script
* Updated desktop-file
* Updated localizations


-------------------------------
Version 0.3-beta1
-------------------------------
* Added support for diff-files;
* Hopefully fixed bug with opening the current dir (appered 
* Added French, Portuguese localizations
* Added: packaging script for Debian-based distros
* Added: Java custom highlighting scheme
* Added: doc comments to C++ scheme
* Added: 'Replace tabs with spaces' option
* Improved settings dialog
* Fixed: bug with small window when the app was closed 
  maximized several times in a row;
* Added: configure script
* Added: saving of last session even if no name was given to it
* Added: restoring scrollbar and cursor position when 
  restoring session
* Fixed: bug with relative paths in filename (at statusbar)
* Fixed: copying highlighting schemes to home dir. Now checks 
  if every single file exists.
* Fixed: if the app was closed maximized, it doesn't restore 
  normal size when started again;
* Fixed: crash when tried to change 'Show line numbers' or 
  'Adjust by width' without any opened documents;
* Added: options 'Show indents' and 'Highlight current line'
  to Settings dialog;


-------------------------------
Version 0.3-dev
-------------------------------
* using QScintilla instead of QTextEdit;
* manual syntax highlighting selection;